file(GLOB man1 "${Documentation_SOURCE_DIR}/manpages/man1/*.1")
install(FILES ${man1} DESTINATION share/man/man1)
file(GLOB man3 "${Documentation_SOURCE_DIR}/manpages/man3/*.3")
install(FILES ${man3} DESTINATION share/man/man3)
file(GLOB man9 "${Documentation_SOURCE_DIR}/manpages/man9/*.9")
install(FILES ${man9} DESTINATION share/man/man9)
